gccida/c0/recog_30
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:41939:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3bn; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:41940:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2cv = ( rtx)x1[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:41952:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = x3bo; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:41967:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2cw; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:41968:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2cx = ( rtx)x1bw[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:41975:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( x2cx->fld[0].rtx, recog_data_0.operand[2]) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:41981:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3bp = ( rtx)x2cx[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42002:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2cy; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42003:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2cz = ( rtx)x1bx[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42010:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( x2cz->fld[0].rtx, recog_data_0.operand[3]) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42016:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3bq = ( rtx)x2cz[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42047:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3bn; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42048:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2db = ( rtx)x1[1]; 
             ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42060:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[3] = x3br; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42075:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2dc; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42076:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2dd = ( rtx)x1bz[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42083:38: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !rtx_equal_p( x2dd->fld[0].rtx, recog_data_0.operand[2]) ) 
                                     ^~~~~~~~~~~~
                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42089:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3bs = ( rtx)x2dd[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/insn-recog.c:42110:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2de; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_30/src/obj/insn-recog.o] Error 1
